# artifish

./: Cargo.toml  README.md
artifish/: .gitignore  Cargo.toml
artifish/src/: angels.rs  color.rs  fish.rs  main.rs  state.rs  vec2.rs
artifish/src/lang/: core.rs  generators.rs  mod.rs
artifish/src/lang/expressions/: actions.rs  bool.rs  generic.rs  math.rs  mod.rs  senses.rs
artifish/src/languages/: expression2.rs  fullstack.rs  mod.rs
artifish_derive/: Cargo.toml
artifish_derive/src/: lib.rs
src/: angels.rs  fish.rs  main.rs  state.rs  vec2.rs
src/languages/: expression.rs  expression2.rs  mod.rs
