[package]
name    = "artifish"
version = "0.1.0"
authors = ["Wout Schellaert <wout@schellaert.org>", "Ilion Beyst <ilion@bey.st>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston                   = "0.53.0"
piston2d-graphics        = "0.40.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.78.0"
rand                     = "0.8.4"
rand_chacha              = "0.3.1"
rand_distr               = "0.4.2"
decorum                  = "0.3.1"
random-branch            = "0.1.1"
